syntax = "proto3"; // we use proto version 3
package database_interface;   // similar to namespace, avoid conflicts

/** DatabaseService service **/
service DatabaseService {
  rpc get(GetRequest) returns (GetResponse) {};
  rpc set(SetRequest) returns (Empty) {};
  
  rpc get_db(Empty) returns (FullDBResponse) {};
}

message Empty {}

message GetRequest {
    string key = 1;
}

message GetResponse {
    int32 error = 1;
    string value = 2;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

enum Operation {
  GET = 0;
  SET = 1;
  DELETE = 2;
};

message FullDBResponse {
  map<string, string> db = 1;
}